@@ -230,6 +230,8 @@
 - TW-1469 Case-insensitive searching broken on Cygwin (thanks to Richard
           Boß).
 - TW-1471 task calc uses output it doesn't understand (thanks to Jens Erat).
+- TW-1477 Incompatibility with recurring tasks created with 2.3.0 (thanks to
+          David Costa).
 - Added new holidays.xy-XY.rc definition files
 - Removed deprecated 'echo.command' setting, in favor of the 'header' and
   'affected' verbosity tokens.
